--- a/index.html
+++ b/index.html
@@ -363,14 +363,14 @@
 
                     <div class="col-md-3 ">
                         <div class="card ">
-                            <div class="card__header "><a href="https://github.com/nicupavel/android-tslib" target="new">Android TSLib</a></div>
+                            <div class="card__header "><a href="https://nicupavel.github.io/cloudrest/" target="new">CloudRest Arhitecture</a></div>
                             <div class="card__main ">
-                                <div class="card__text "> Android Touchscreen Calibration and Testing
-                                    <br><span class="label label-primary ">C</span>
+                                <div class="card__text "> An open architecture for connecting consumer IoT devices using RESTful APIs.
+                                    
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>                    
 
                     <div class="col-md-3 ">
                         <div class="card ">
@@ -401,6 +401,17 @@
                             <div class="card__main ">
                                 <div class="card__text "> Send selected applications windows to a USB LCD.
                                     <br><span class="label label-primary">C</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3 ">
+                        <div class="card ">
+                            <div class="card__header "><a href="https://github.com/nicupavel/android-tslib" target="new">Android TSLib</a></div>
+                            <div class="card__main ">
+                                <div class="card__text "> Android Touchscreen Calibration and Testing
+                                    <br><span class="label label-primary ">C</span>
                                 </div>
                             </div>
                         </div>
