Update with more info

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="card">
                             <div class="card__header">Xeco Energy</div>
                             <div class="card__main">
-                                <div class="card__text">IoT WiFi Mesh Network, MQTT, AWS IoT, Python app</div>
+                                <div class="card__text">Industrial Energy Monitoring <br>IoT WiFi Mesh Network, MQTT, AWS IoT, Python app</div>
                             </div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                         <div class="card">
                             <div class="card__header">Hookd WiFi</div>
                             <div class="card__main">
-                                <div class="card__text">High-Throughput Multipoint WiFi Routers, Azure Cloud devices orchestrator</div>
+                                <div class="card__text">High-Throughput Multipoint WiFi Routers <br> OpenWRT, WiFi Management Service, Azure Cloud devices orchestrator</div>
                             </div>
                         </div>
                     </div>
@@ -184,7 +184,7 @@
                         <div class="card">
                             <div class="card__header">Hit Media</div>
                             <div class="card__main">
-                                <div class="card__text">Network Management tools, Web development</div>
+                                <div class="card__text">Live playlist App, Network Management tools, Web development</div>
                             </div>
                         </div>
                     </div>
